--- a/icons/manifest.json
+++ b/icons/manifest.json
@@ -38,7 +38,7 @@
 			"density": 4
 		}
 	],
-	"start_url": "index.html",
+	"start_url": "../index.html",
 	"display": "standalone",
 	"orientation": "portrait"
 }
